clusters/k3s/apps/automation/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homepage
  namespace: docker-services
  labels:
    kubernetes.io/service-name: homepage
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.55
ports:
  - port: 80
    protocol: TCP
